# kafka_websocket_fastapi

./: .env  .gitignore  Makefile  Readme.md  pyproject.toml
app/application/api/: main.py
app/domain/entities/: base.py  messages.py
app/domain/events/: base.py  messages.py
app/domain/exceptions/: base.py  messages.py
app/domain/values/: base.py  messages.py
app/logic/: mediator.py
app/logic/commands/: base.py  mediator.py
app/logic/events/: base.py
app/logic/exceptions/: base.py  mediator.py
app/tests/domain/values/: test_messages.py
