[tool.poetry]
name = "kafka-websocket-fastapi"
version = "0.1.0"
description = ""
authors = ["ʕ ᵔᴥᵔ ʔ <email@not.exists>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.4"
motor = "^3.6.0"
uvicorn = {extras = ["all"], version = "^0.32.0"}
ipython = "^8.29.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
